# trial-twin

./: requirements.txt
trialtwin-lab/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
trialtwin-lab/.streamlit/: config.toml
trialtwin-lab/app/: patient_explorer.py  streamlit_app.py  trial_dashboard.py
trialtwin-lab/configs/: trial_gbsg2.yaml  trial_nsclc.yaml
trialtwin-lab/data/outputs/SYNTH-NSCLC-001/: artifacts.pkl
trialtwin-lab/outputs/reports/: qa_report.md
trialtwin-lab/scripts/: run_pipeline.py
trialtwin-lab/tests/: conftest.py  test_endpoints.py  test_features.py  test_qa.py
trialtwin-lab/trialtwin/efficiency/: simulation.py
trialtwin-lab/trialtwin/endpoints/: binary.py  survival.py
trialtwin-lab/trialtwin/features/: baseline.py  builder.py  longitudinal.py
trialtwin-lab/trialtwin/harmonize/: harmonizer.py
trialtwin-lab/trialtwin/ingest/: base.py  gbsg2_loader.py  synthetic.py
trialtwin-lab/trialtwin/model/: cox.py  digital_twin.py  evaluate.py  gbm.py
trialtwin-lab/trialtwin/qa/: checks.py  report.py
trialtwin-lab/trialtwin/utils/: config.py  plotting.py
