[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "trialtwin-lab"
version = "0.1.0"
description = "Digital twins for oncology clinical trials: from raw data to efficiency gains"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["trialtwin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
