[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialtwin-lab"
version = "0.1.0"
description = "Digital twins for oncology clinical trials: from raw data to efficiency gains"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0,<3.0",
    "lifelines>=0.27,<1.0",
    "scikit-survival>=0.22,<1.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.11,<2.0",
    "streamlit>=1.28,<2.0",
    "plotly>=5.18,<6.0",
    "matplotlib>=3.8,<4.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4,<9.0"]

[tool.setuptools.packages.find]
include = ["trialtwin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
